    mips64el.
  * Update from upstream stable branch:
    - Fix pow() precision on CPUs with fma4, and the corresponding testsuite
      failures.
    - debian/patches/s390/submitted-socketcall.diff: drop, merged upstream.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 5932 (from
    glibc-bsd):
    - Fix consistency check for PIC code when built with GCC 5.  Closes:
      #817207.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Mar 2016 14:33:41 +0100

glibc (2.22-1) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/testsuite-xfail-debian.mk (alpha): mark a few failures which
    are not a regression compared to 2.21 as xfail.
  * debian/testsuite-xfail-debian.mk (hurd): mark another failure which
    is not a regression compared to 2.21 as xfail.
  * debian/control.in/main: avoid experimental versions, use versions that
    went through unstable instead.

  [ Samuel Thibault ]
  * control: Accept hurd-headers-dev and libihash-dev as alternatives to
    hurd-dev for bootstrapping.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Mar 2016 12:38:18 +0100

glibc (2.22-0experimental3) experimental; urgency=medium

  [ Aurelien Jarno ]
  * Update from upstream stable branch:
    - debian/patches/any/local-CVE-2015-7547.diff: drop, merged upstream.
  * debian/testsuite-xfail-debian.mk (hurd): correctly detect Hurd. Mark tests
    failing to build as unsupported. Update for glibc 2.22.
  * debian/patches/hurd-i386/submitted-hurd-abilist.diff: new patch to get the
    abilist tests buildable on Hurd.
  * debian/testsuite-xfail-debian.mk (mips): correctly detect 64-bit mips
    flavours.
  * debian/testsuite-xfail-debian.mk (hppa): mark new tests which fail as
    xfail.
  * debian/testsuite-xfail-debian.mk (alpha): mark new tests which fail as
    xfail.
  * control.in/main: Bump Standards-Version to 3.9.7 (no changes).
  * debian/patches/sparc/submitted-sparc64-socketcall.diff: new patch to fix