@@ -9,6 +9,7 @@ TMPDIR/LIBDIR/libg.a LIBDIR
 TMPDIR/LIBDIR/libieee.a LIBDIR
 TMPDIR/LIBDIR/libm.a LIBDIR
 TMPDIR/LIBDIR/libmcheck.a LIBDIR
+TMPDIR/LIBDIR/libmvec_nonshared.a LIBDIR
 TMPDIR/LIBDIR/libnsl.a LIBDIR
 TMPDIR/LIBDIR/libpthread.a LIBDIR
 TMPDIR/LIBDIR/libpthread_nonshared.a LIBDIR
