@@ -97,6 +97,7 @@ vardbdir=/var/lib/misc
 rtlddir=/lib
 slibdir=/lib/$(DEB_HOST_MULTIARCH)
 libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
+mvec = no
 
 
 BASE_CC = gcc
