@@ -96,7 +96,7 @@ $(stamp)configure_%: $(stamp)mkbuilddir_%
 		--with-bugurl="http://www.debian.org/Bugs/" \
 		$(if $(filter $(pt_chown),yes),--enable-pt_chown) \
 		$(if $(filter $(threads),no),--disable-nscd) \
-		$(if $(filter $(mvec),no),--disable-mathvec) \
+		$(if $(filter $(call xx,mvec),no),--disable-mathvec) \
 		$(call xx,with_headers) $(call xx,extra_config_options))
 	touch $@
 
