@@ -142,7 +142,6 @@ $(stamp)debhelper-common:
 	      sed -e "s/^#.*//" -i $$y ; \
 	      $(if $(filter $(pt_chown),no),sed -e "/pt_chown/d" -i $$y ;) \
 	      $(if $(filter $(pldd),no),sed -e "/pldd/d" -i $$y ;) \
-	      $(if $(filter $(mvec),no),sed -e "/libmvec/d" -i $$y ;) \
 	      ;; \
 	  esac; \
 	done
@@ -235,6 +234,7 @@ $(stamp)debhelper_%: $(stamp)debhelper-common $(stamp)install_%
 	    sed -e "s#FLAVOR#$$curpass#g" -i $$t; \
 	    sed -e "s#RTLD_SO#$$rtld_so#g" -i $$t ; \
 	    sed -e "s#MULTIARCHDIR#$$DEB_HOST_MULTIARCH#g" -i $$t ; \
+	    $(if $(filter $(call xx,mvec),no),sed -e "/libmvec/d" -i $$t ;) \
 	  done ; \
 	done
 endif
