@@ -11,6 +11,11 @@ glibc (2.22-2) UNRELEASED; urgency=medium
     glibc-bsd):
     - Fix consistency check for PIC code when built with GCC 5.  Closes:
       #817207.
+  * debian/rules, debian/rules.d/build.mk, debian/rules.d/debhelper.mk: define
+    the mvec variable per flavour and not per platform.
+  * sysdeps/*mk: enable libmvec only on amd64 and x32 flavours.
+  * debian/debhelper.in/libc-dev-alt.install: install libmvec_nonshared.a also
+    for alternative builds.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Mar 2016 14:33:41 +0100
 
